--- a/source/index.html
+++ b/source/index.html
@@ -116,20 +116,20 @@
             <tr class="rates__table-header">
               <th class="rates__table-header-cell rates__table-header-cell--empty"></th>
               <th class="rates__table-header-cell">
-                <b class="rates__name">БАЗА</b>
+                <span class="rates__name">База</span>
                 <span class="rates__price">1,99 USD</span>
               </th>
               <th class="rates__table-header-cell rates__table-header-cell--bestselling">
-                <b class="rates__name">СТАНДАРТ</b>
+                <span class="rates__name">Стандарт</span>
                 <span class="rates__price">3,99 USD</span>
               </th>
               <th class="rates__table-header-cell">
-                <b class="rates__name">АНЛИМ</b>
+                <span class="rates__name">Анлим</span>
                 <span class="rates__price">9,99 USD</span>
               </th>
             </tr>
             <tr>
-              <td class="class=rates__table-cell rates__table-cell--option-name">Розовый фильтр</td>
+              <td class="rates__table-cell rates__table-cell--option-name">Розовый фильтр</td>
               <td class=rates__table-cell>
                 <p class="rates__cell-name">Розовый фильтр</p>
                 <img src="img/yes.png" alt="Yes">
@@ -144,7 +144,7 @@
               </td>
             </tr>
             <tr>
-              <td class="class=rates__table-cell rates__table-cell--option-name">Смайлики</td>
+              <td class="rates__table-cell rates__table-cell--option-name">Смайлики</td>
               <td class="rates__table-cell">
                 <p class="rates__cell-name">Смайлики</p>
                 <img src="img/no.png" alt="No">
@@ -159,7 +159,7 @@
               </td>
             </tr>
             <tr>
-              <td class="class=rates__table-cell rates__table-cell--option-name">Комментарии</td>
+              <td class="rates__table-cell rates__table-cell--option-name">Комментарии</td>
               <td class="rates__table-cell">
                 <p class="rates__cell-name">Комментарии</p>
                 <img src="img/no.png" alt="No">
@@ -203,20 +203,20 @@
     <footer class="footer">
       <div class="footer__wrapper">
         <a class="footer__logo"></a>
-        <ul class="footer__social social-list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        <ul class="footer__social-list">
+          <li class="footer__social-item">
+            <a class="footer__social-link footer__social-link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+          <li class="footer__social-item">
+            <a class="footer__social-link footer__social-link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в
+          <li class="footer__social-item">
+            <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в
               Ютубе</a>
           </li>
         </ul>
         <div class="footer__copyright copyright">
-          <b class="copyright__text">Разработано:</b>
+          <span class="copyright__text">Разработано:</span>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </div>
       </div>
